--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -4,7 +4,7 @@
 
 @layer base {
     html {
-        @apply text-[14px]
+        /*@apply text-[14px]*/
     }
 
     body {
@@ -21,5 +21,13 @@
 
     th {
         @apply text-left;
+    }
+
+    h1, h2, h3, h4, h5, h6, p, th, td, dt, dd, label, span, a {
+        @apply text-gray-800;
+    }
+
+    hr {
+        @apply h-0.5 bg-gray-300
     }
 }
