--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -3,16 +3,12 @@
 @tailwind utilities;
 
 @layer base {
-    html {
-        /*@apply text-[14px]*/
-    }
-
     body {
         @apply bg-gray-100;
     }
 
     main {
-        @apply p-4;
+        @apply p-8;
     }
 
     table {
@@ -28,6 +24,6 @@
     }
 
     hr {
-        @apply h-[1px] bg-gray-300
+        @apply h-0.5 bg-gray-300
     }
 }
